# nonebot_plugin_batarot

./: README.md  __init__.py  batarot.json  batarot_fortune.json  batarot_spread.json  batarot_url.json  commands.py  pyproject.toml  utils.py
.github/workflows/: pypi-publish.yml
nonebot_plugin_batarot/: __init__.py  batarot.json  batarot_fortune.json  batarot_spread.json  batarot_url.json  commands.py  config.py  handler.py  utils.py
